Some figures might not display properly in the GitHub version of the notebook. To view all the figures, please open the Colab link, to do that click on the 'Open in Colab' button at the top of the notebook.

--- a/FinalDSProjectmpg.ipynb
+++ b/FinalDSProjectmpg.ipynb
@@ -24,6 +24,8 @@
         "\n",
         "Dataset link: [Auto MPG Dataset](https://www.kaggle.com/datasets/uciml/autompg-dataset)\n",
         "\n",
+        "Github Repository: [Link to GitHub Repository](https://github.com/ffathy-tdx/MPG-Data-Analysis/)\n",
+        "\n",
         "**1. Title: Auto-Mpg Data**\t\n",
         "\t\t\t\t\n",
         "**2. Sources:**\t\t\t\t\n",
